[package]
name = "rusty-fume"
version = "0.8.0"
authors = ["Nereuxofficial <37740907+Nereuxofficial@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"
edition = "2021"

[dependencies]
# Convenient error handling
color-eyre = "0.6.2"
# Logging
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
# Futures
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
# Hex en/decoding
hex = "0.4.3"
# MQTT Packet generation
mqtt-protocol = "0.11.2"
# Random number generation with xoshiro for faster PRNG
rand = "0.8.5"
rand_xoshiro = "0.6.0"
# Command line interface
clap = { version = "4.3.24", features = ["derive"] }
# For serialization
serde = { version = "1.0.186", features = ["derive"] }
toml = "0.7.6"
# For serialization of raw bytes
serde_with = {version="3.1.0", features = ["hex"]}

# Tokio Console Support
console-subscriber = "0.1.10"
# For Websocket support
tokio-tungstenite = "0.20.0"
# For TLS support
tokio-rustls = { version="0.24.1", features = ["dangerous_configuration"], optional = true }
rustls = { version="0.21.6", features = ["dangerous_configuration"], optional = true }

# Opentelemetry tracing. Only activated when using the "stats" feature
opentelemetry = { version = "0.20.0", features=["trace", "metrics", "rt-tokio"] ,optional = true }
opentelemetry-otlp = { version = "0.13.0", features=["metrics"], optional = true }
opentelemetry-jaeger = { version = "0.19.0", features = ["rt-tokio", "isahc_collector_client", "collector_client", "reqwest_rustls_collector_client", "reqwest_blocking_collector_client"], optional = true }
tracing-opentelemetry = { version = "0.20.0", optional = true }

[profile.release]
debug = true
codegen-units = 1

[features]
default = ["tcp"]
tcp = []
# TODO: Add quic, ws support
quic = []
websocket = []
tls = ["dep:tokio-rustls", "dep:rustls"]
# TODO: Stats that add insight into performance, coverage etc.
stats = ["dep:opentelemetry-otlp", "dep:opentelemetry", "dep:opentelemetry-jaeger", "dep:tracing-opentelemetry"]