[package]
name = "rusty-fume"
version = "0.8.0"
authors = ["Nereuxofficial <37740907+Nereuxofficial@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"
edition = "2021"

[workspace]

[dependencies]
lib = {path = "lib"}
# Convenient error handling
color-eyre = "0.6.2"
# Logging
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
# Futures
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
# Hex en/decoding
hex = "0.4.3"
# MQTT Packet generation
mqtt-protocol = "0.11.2"
# Random number generation with xoshiro for faster PRNG
rand = "0.8.5"
rand_xoshiro = "0.6.0"
# Command line interface
clap = { version = "4.3.24", features = ["derive"] }
# For serialization
serde = { version = "1.0.186", features = ["derive"] }
toml = "0.7.6"
# For serialization of raw bytes
serde_with = {version="3.1.0", features = ["hex"]}

# Tokio Console Support
console-subscriber = "0.1.10"
[profile.release]
debug = true
codegen-units = 1

[features]
default = ["tcp"]
tcp = []
# TODO: Add quic, ws support
quic = []
websocket = []
tls = ["lib/tls"]
